--- a/html/filmlist.html
+++ b/html/filmlist.html
@@ -18,11 +18,11 @@
         <script src="https://kit.fontawesome.com/2c5c2a6dff.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <div class="loader">Loading page</div>
+        <!-- <div class="loader">Loading page</div> -->
         <header>
             <section class="header transparent-header">
                 <div class="header__items header__items-light">
-                    <!-- <div class="header-left">
+                    <div class="header-left">
                         <div class="hide-on-desktop">
                             <input type="checkbox" id="menu-checkbox">
                             <label for="menu-checkbox" class="icons-header header__items-light"><i tabindex="0" class="fa-solid fa-bars"></i></label>
@@ -61,7 +61,7 @@
                                 <a href="../html/filmlist.html">A-Z</a>
                             </nav>
                         </div>   
-                    </div> -->
+                    </div>
                     <div class="header-center">
                         <a href="../index.html"><img src="../assets/logo/SquareEyes_Logo_light-light.png" class="logo" alt="Square Eyes logo"></a>
                     </div>
