--- a/html/filmpage.html
+++ b/html/filmpage.html
@@ -23,7 +23,7 @@
         <header>
             <section class="header transparent-header">
                 <div class="header__items header__items-light">
-                    <!-- <div class="header-left">
+                    <div class="header-left">
                         <div class="hide-on-desktop">
                             <input type="checkbox" id="menu-checkbox">
                             <label for="menu-checkbox" class="icons-header header__items-light"><i tabindex="0" class="fa-solid fa-bars"></i></label>
@@ -62,7 +62,7 @@
                                 <a href="../html/filmlist.html">A-Z</a>
                             </nav>
                         </div>   
-                    </div> -->
+                    </div>
                     <div class="header-center">
                         <a href="../index.html"><img src="../assets/logo/SquareEyes_Logo_light-light.png" class="logo" alt="Square Eyes logo"></a>
                     </div>
@@ -75,6 +75,63 @@
             </section>
         </header>
         <main>
+            <div class="filmpage_content">
+                <div>
+                    <img class="img" src="../assets/wgt/01_Sc2_Ingrid_looks_at_graves_2.jpg" alt="Image from the film Who Goes There? Ingrid looks at graves.">
+                </div>
+                <div class="film-grid">
+                    <div class="grid-title">
+                        <h1 class="title">Who Goes There?</h1>
+                    </div>
+                    <div class="grid-details">
+                        <div class="details">
+                            <div>United Kingdom 2020</div>
+                            <div>12</div>
+                            <div>1H 40Min</div>
+                            <div>Horror, Western</div>
+                        </div>
+                    </div>
+                    <div class="grid-icons">
+                        <div class="filmpage-icons">
+                            <i aria-label="Trailer" class="fa-solid fa-film"></i>
+                            <i aria-label="Share" class="fa-solid fa-share-nodes"></i>
+                            <i aria-label="Add to my films" class="fa-solid fa-bookmark"></i>
+                        </div>
+                    </div>
+                    <div class="grid-synopsis">
+                        <div class="synopsis">
+                            <p>Minnesota 1880: The trust of three Norwegian sisters is tested when a stranger appears on their prairie. When the eldest invites him in to heal her dying sister, she doesn't realise that a supernatural force is crossing her threshold.</p>
+                        </div>
+                    </div>
+                    <div class="grid-cta">
+                        <div class="filmpage-button">
+                            <a href="checkout.html" class="cta">Buy now for 109 kr</a>
+                        </div>
+                    </div>
+                    <div class="grid-castcrew">
+                        <div class="castcrew">
+                            <h3>Director</h3>
+                            <p>Astrid Thorvaldsen</p>
+                            <h3>Cast</h3>
+                            <p>Nina Yndis, Siri Meland, Rikke Haughem, Liam McMahon</p>
+                            <h3>Writer</h3>
+                            <p>William Gilles</p>
+                            <h3>Producer</h3>
+                            <p>Leah Bethany Jones</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="explore-container">
+                    <h3 class="film-selection__heading">Explore more like this</h3>
+                    <div class="explore-flex">
+                        <div class="explore-items">
+                            <a href="">
+                                <img src="" alt="Image from the film Film title">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
         <footer class="hide-on-mobile">
             <nav class="footer-nav">
