--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Roboto&family=Source+Serif+4:opsz,wght@8..60,700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./css/index.css">
         <script src="https://kit.fontawesome.com/2c5c2a6dff.js" crossorigin="anonymous"></script>
-        <script type="module" src="./scripts/index.mjs"></script>
+        <script type="module" src="./scripts/home.mjs"></script>
     </head>
     <body>
-        <div class="loader">Loading page</div>
+        <!-- <div class="loader">Loading page</div> -->
         <header>
             <section class="header transparent-header">
                 <div class="header__items header__items-light">
-                    <!-- <div class="header-left">
+                    <div class="header-left">
                         <div class="hide-on-desktop">
                             <input type="checkbox" id="menu-checkbox">
                             <label for="menu-checkbox" class="icons-header header__items-light"><i tabindex="0" class="fa-solid fa-bars"></i></label>
@@ -63,7 +63,7 @@
                                 <a href="./html/filmlist.html">A-Z</a>
                             </nav>
                         </div>   
-                    </div> -->
+                    </div>
                     <div class="header-center">
                         <a href="./index.html"><img src="./assets/logo/SquareEyes_Logo_light-light.png" class="logo" alt="Square Eyes logo"></a>
                     </div>
@@ -123,13 +123,13 @@
                 </ul>
             </details>
             <section class="film-container" id="film-container"></section>
-            <!--
+            
             <div class="film-selection-container">
                 <h3 class="film-selection__heading">My films</h3>
                 <div class="image-scroller">
                     <div class="img-element">
                         <a href="./html/filmpage.html">
-                            <img class="film-image" src="./assets/my_films/01_ardian-lumi-6Woj_wozqmA-unsplash.jpg" alt="Film title">
+                            <img class="film-image" src="" alt="Film title">
                             <div class="film-selection-content">
                                 <p class="film-scroller">Film Title</p>
                                 <p class="director-scroller">Director Director</p>
@@ -138,7 +138,7 @@
                     </div>
                     <div class="img-element">
                         <a href="./html/filmpage.html">
-                            <img class="film-image" src="./assets/my_films/02_lu-quang-do-QY1Lm91bEp4-unsplash.jpg" alt="Film title">
+                            <img class="film-image" src="" alt="Film title">
                             <div class="film-selection-content">
                                 <p class="film-scroller">Film Title</p>
                                 <p class="director-scroller">Director Director</p>
@@ -147,7 +147,7 @@
                     </div>
                     <div class="img-element">
                         <a href="./html/filmpage.html">
-                            <img class="film-image" src="./assets/my_films/03_nick-perez-duvq92-VCZ4-unsplash.jpg" alt="Film title">
+                            <img class="film-image" src="" alt="Film title">
                             <div class="film-selection-content">
                                 <p class="film-scroller">Film Title</p>
                                 <p class="director-scroller">Director Director</p>
@@ -156,7 +156,7 @@
                     </div>
                     <div class="img-element">
                         <a href="./html/filmpage.html">
-                            <img class="film-image" src="./assets/my_films/04_seb-p34k-hamel-NFpbpxujX60-unsplash.jpg" alt="Film title">
+                            <img class="film-image" src="" alt="Film title">
                             <div class="film-selection-content">
                                 <p class="film-scroller">Film Title</p>
                                 <p class="director-scroller">Director Director</p>
@@ -165,7 +165,7 @@
                     </div>
                 </div>
             </div>
-            <div class="film-selection-container">
+            <!-- <div class="film-selection-container">
                 <h3 class="film-selection__heading">Award Winning Films</h3>
                 <div class="image-scroller">
                     <div class="img-element">
@@ -287,8 +287,8 @@
                         </a>
                     </div>
                 </div>
-            </div>
-            --> 
+            </div> -->
+            
         </main>
         <footer class="hide-on-mobile">
             <nav class="footer-nav">
