generate html, some css

--- a/html/filmpage.html
+++ b/html/filmpage.html
@@ -75,9 +75,9 @@
             </section>
         </header>
         <main>
-            <div class="filmpage_content">
-                <div>
-                    <img class="img" src="../assets/wgt/01_Sc2_Ingrid_looks_at_graves_2.jpg" alt="Image from the film Who Goes There? Ingrid looks at graves.">
+            <div class="filmpage_content" id="js-filmpage-content">
+                <!-- <div>
+                    <img class="img" src="" alt="Image from the film Who Goes There? Ingrid looks at graves.">
                 </div>
                 <div class="film-grid">
                     <div class="grid-title">
@@ -130,7 +130,7 @@
                             </a>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </main>
         <footer class="hide-on-mobile">
