get, create cart. Empty cart message

--- a/html/checkout.html
+++ b/html/checkout.html
@@ -77,7 +77,7 @@
         <main>
             <h1>Checkout</h1>
 
-            <div class="cart-items">
+            <div class="cart-items" id="cart">
             </div>
             <div class="cart-tot">
                 <span class="cart-total-title">Total</span>
@@ -126,7 +126,5 @@
                 </div>
             </nav>
         </footer>
-
-        <a href=".filpage.html">VIEW FILM INFO</a>
     </body>
 </html>
