start generate html for scroller

--- a/html/checkout.html
+++ b/html/checkout.html
@@ -19,7 +19,7 @@
         <script type="module" src="../scripts/checkout.mjs"></script>
     </head>
     <body>
-        <div class="loader">Loading page</div>
+        <!-- <div class="loader">Loading page</div> -->
         <header>
             <section class="header transparent-header">
                 <div class="header__items header__items-light">
