splitting js code into smaller files

--- a/index.html
+++ b/index.html
@@ -55,15 +55,12 @@
                             <input type="checkbox" id="dekstop-menu-checkbox">
                             <label tabindex="0" class="desktop-label" for="dekstop-menu-checkbox">Film Categories</label>
                             <nav class="nav-dektop">
-                                <button id="js-genre-action">Action</button>          
-                                <a href="./html/filmlist.html">Action</a>
-                                <a href="./html/filmlist.html">Comedy</a>
-                                <a href="./html/filmlist.html">Drama</a>
-                                <a href="./html/filmlist.html">Documentaries</a>
-                                <a href="./html/filmlist.html">Fantasy & Sci-fi</a>
-                                <a href="./html/filmlist.html">Horror</a>
-                                <a href="./html/filmlist.html">Kids</a>
-                                <a href="./html/filmlist.html">A-Z</a>
+                                <button class="genre-button" id="js-genre-action">Action</button>          
+                                <button class="genre-button" id="js-genre-comedy">Comedy</button>          
+                                <button class="genre-button" id="js-genre-drama">Drama</button>          
+                                <button class="genre-button" id="js-genre-horror">Horror</button>          
+                                <button class="genre-button" id="js-genre-kids">Kids</button>          
+                                
                             </nav>
                         </div>   
                     </div>
@@ -124,133 +121,9 @@
                             </div>
                         </a>
                     </div>
-                     -->
+-->
                 </div>
-            </div>
-            <!-- <div class="film-selection-container">
-                <h3 class="film-selection__heading">Award Winning Films</h3>
-                <div class="image-scroller">
-                    <div class="img-element">
-                        <a href="./html/filmpage.html">
-                            <img class="film-image" src="./assets/aw_films/01_kalegin-ffustAcaX0E-unsplash.jpg" alt="Film title">
-                            <div class="film-selection-content">
-                                <p class="film-scroller">Film Title</p>
-                                <p class="director-scroller">Director Director</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="img-element">
-                        <a href="./html/filmpage.html">
-                            <img class="film-image" src="./assets/aw_films/02_leighann-blackwood-hx87JWG4yCI-unsplash.jpg" alt="Film title">
-                            <div class="film-selection-content">
-                                <p class="film-scroller">Film Title</p>
-                                <p class="director-scroller">Director Director</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="img-element">
-                        <a href="./html/filmpage.html">
-                            <img class="film-image" src="./assets/aw_films/03_rod-long-rKiXtZPOQ28-unsplash.jpg" alt="Film title">
-                            <div class="film-selection-content">
-                                <p class="film-scroller">Film Title</p>
-                                <p class="director-scroller">Director Director</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="img-element">
-                        <a href="./html/filmpage.html">
-                            <img class="film-image" src="./assets/aw_films/04_sutirta-budiman-PdiOj8kRy28-unsplash.jpg" alt="Film title">
-                            <div class="film-selection-content">
-                                <p class="film-scroller">Film Title</p>
-                                <p class="director-scroller">Director Director</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="film-selection-container">
-                <h3 class="film-selection__heading">New Directors</h3>
-                <div class="image-scroller">
-                    <div class="img-element">
-                        <a href="./html/filmpage.html">
-                            <img class="film-image" src="./assets/new_dir/01_artem-beliaikin--QY2MQm0nRI-unsplash.jpg" alt="Film title">
-                            <div class="film-selection-content">
-                                <p class="film-scroller">Film Title</p>
-                                <p class="director-scroller">Director Director</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="img-element">
-                        <a href="./html/filmpage.html">
-                            <img class="film-image" src="./assets/new_dir/02_Sc2_Ingrid_looks_at_graves_2.jpg" alt="Film title">
-                            <div class="film-selection-content">
-                                <p class="film-scroller">Who Goes There?</p>
-                                <p class="director-scroller">Astrid Thorvaldsen</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="img-element">
-                        <a href="./html/filmpage.html">
-                            <img class="film-image" src="./assets/new_dir/03_jonathan-cooper-f4_6kR_CUm8-unsplash.jpg" alt="Film title">
-                            <div class="film-selection-content">
-                                <p class="film-scroller">Film Title</p>
-                                <p class="director-scroller">Director Director</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="img-element">
-                        <a href="./html/filmpage.html">
-                            <img class="film-image" src="./assets/new_dir/04_timur-garifov-QpE7u5CVtho-unsplash.jpg" alt="Film title">
-                            <div class="film-selection-content">
-                                <p class="film-scroller">Film Title</p>
-                                <p class="director-scroller">Director Director</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="film-selection-container">
-                <h3 class="film-selection__heading">New Films</h3>
-                <div class="image-scroller">
-                    <div class="img-element">
-                        <a href="./html/filmpage.html">
-                            <img class="film-image" src="./assets/new_films/01_bailey-alexander-CvSPwxBMyWk-unsplash.jpg" alt="Film title">
-                            <div class="film-selection-content">
-                                <p class="film-scroller">Film Title</p>
-                                <p class="director-scroller">Director Director</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="img-element">
-                        <a href="./html/filmpage.html">
-                            <img class="film-image" src="./assets/new_films/02_jean-beller-BPk54EnPmgY-unsplash.jpg" alt="Film title">
-                            <div class="film-selection-content">
-                                <p class="film-scroller">Film Title</p>
-                                <p class="director-scroller">Director Director</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="img-element">
-                        <a href="./html/filmpage.html">
-                            <img class="film-image" src="./assets/new_films/03_jennifer-coffin-grey-uzhulj1gifY-unsplash.jpg" alt="Film title">
-                            <div class="film-selection-content">
-                                <p class="film-scroller">Film Title</p>
-                                <p class="director-scroller">Director Director</p>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="img-element">
-                        <a href="./html/filmpage.html">
-                            <img class="film-image" src="./assets/new_films/04_nasa-Q1p7bh3SHj8-unsplash.jpg" alt="Film title">
-                            <div class="film-selection-content">
-                                <p class="film-scroller">Film Title</p>
-                                <p class="director-scroller">Director Director</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-            </div> -->
-            
+            </div>            
         </main>
         <footer class="hide-on-mobile">
             <nav class="footer-nav">
