tidy up and filter films

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <div class="hide-on-mobile">
                             <input type="checkbox" id="dekstop-menu-checkbox">
                             <label tabindex="0" class="desktop-label" for="dekstop-menu-checkbox">Film Categories</label>
-                            <nav class="nav-dektop">
+                            <nav class="nav-dektop" id="nav-genre-buttons">
                                 <button class="genre-button" id="js-genre-action">Action</button>          
                                 <button class="genre-button" id="js-genre-comedy">Comedy</button>          
                                 <button class="genre-button" id="js-genre-drama">Drama</button>          
