--- a/html/checkout.html
+++ b/html/checkout.html
@@ -77,7 +77,37 @@
         <main>
             <h1>Checkout</h1>
 
-            <div class="cart-items" id="cart">
+            <div class="cart-container" id="cart-container">
+                <div class="cart-item">
+                    <a href="filmpage.html">
+                        <img class="cart-image" src="../assets/banner-horror_matthias-cooper-ObYmRBaMDyg-unsplash.jpg" alt="">
+                    </a>
+                    <div class="info-element">
+                        <p class="cart-item-title">Title</p>
+                        <p class="cart-item-price">129 kr</p>
+                    </div>
+                    <div class="quantity-element">
+                        <p class="cart-item-quantity">Quantity: 1</p>
+                        <button class="change-quantity-btn">+</button>
+                        <button class="change-quantity-btn">-</button>
+                    </div>
+                    <button class="cta">Remove</button>
+                </div>
+                <div class="cart-item">
+                    <a href="filmpage.html">
+                        <img class="cart-image" src="../assets/banner-horror_matthias-cooper-ObYmRBaMDyg-unsplash.jpg" alt="">
+                    </a>
+                    <div class="info-element">
+                        <p class="cart-item-title">Title</p>
+                        <p class="cart-item-price">129 kr</p>
+                    </div>
+                    <div class="quantity-element">
+                        <p class="cart-item-quantity">Quantity: 1</p>
+                        <button class="change-quantity-btn">+</button>
+                        <button class="change-quantity-btn">-</button>
+                    </div>
+                    <button class="cta">Remove</button>
+                </div>
             </div>
             <div class="cart-tot">
                 <span class="cart-total-title">Total</span>
