--- a/index.html
+++ b/index.html
@@ -106,8 +106,12 @@
                     <li>Drama</li>
                 </ul>
             </details>
-            <section class="film-container" id="js-films-container"></section>
-            
+            <section class="film-container" id="js-films-container" aria-live="polite"></section>
+            <nav class="pagination">
+                <button class="pagination-button" id="prev-button" title="Previous page" aria-label="Previous page">&lt;</button>
+                <div id="pagination-numbers"></div>
+                <button class="pagination-button" id="next-button" title="Next page" aria-label="Next page">&gt;</button>
+            </nav>
             <div class="film-selection-container" id="my-films-container">
                 <h3 class="film-selection__heading">My favorite films</h3>
                 <div class="image-scroller" id="my-films-scroller">
