add title and aria to pagination btn

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
             </details>
             <section class="film-container" id="js-films-container" aria-live="polite"></section>
             <nav class="pagination">
-                <button class="pagination-button" id="prev-button" title="Previous page" aria-label="Previous page">&lt;</button>
+                <!-- <button class="pagination-button" id="prev-button" title="Previous page" aria-label="Previous page">&lt;</button>
                 <div id="pagination-numbers"></div>
-                <button class="pagination-button" id="next-button" title="Next page" aria-label="Next page">&gt;</button>
+                <button class="pagination-button" id="next-button" title="Next page" aria-label="Next page">&gt;</button> -->
             </nav>
             <div class="film-selection-container" id="my-films-container">
                 <h3 class="film-selection__heading">My favorite films</h3>
