creating cart html

--- a/html/checkout.html
+++ b/html/checkout.html
@@ -78,7 +78,7 @@
             <h1>Checkout</h1>
 
             <div class="cart-container" id="cart-container">
-                <div class="cart-item">
+                <!-- <div class="cart-item">
                     <a href="filmpage.html">
                         <img class="cart-image" src="../assets/banner-horror_matthias-cooper-ObYmRBaMDyg-unsplash.jpg" alt="">
                     </a>
@@ -107,7 +107,7 @@
                         <button class="change-quantity-btn">-</button>
                     </div>
                     <button class="cta">Remove</button>
-                </div>
+                </div> -->
             </div>
             <div class="cart-tot">
                 <span class="cart-total-title">Total</span>
