add event listener

--- a/html/checkout.html
+++ b/html/checkout.html
@@ -76,43 +76,34 @@
         </header>
         <main>
             <h1>Checkout</h1>
-
-            <div class="cart-container" id="cart-container">
-                <!-- <div class="cart-item">
-                    <a href="filmpage.html">
-                        <img class="cart-image" src="../assets/banner-horror_matthias-cooper-ObYmRBaMDyg-unsplash.jpg" alt="">
-                    </a>
-                    <div class="info-element">
-                        <p class="cart-item-title">Title</p>
-                        <p class="cart-item-price">129 kr</p>
-                    </div>
-                    <div class="quantity-element">
-                        <p class="cart-item-quantity">Quantity: 1</p>
-                        <button class="change-quantity-btn">+</button>
-                        <button class="change-quantity-btn">-</button>
-                    </div>
-                    <button class="cta">Remove</button>
-                </div>
-                <div class="cart-item">
-                    <a href="filmpage.html">
-                        <img class="cart-image" src="../assets/banner-horror_matthias-cooper-ObYmRBaMDyg-unsplash.jpg" alt="">
-                    </a>
-                    <div class="info-element">
-                        <p class="cart-item-title">Title</p>
-                        <p class="cart-item-price">129 kr</p>
-                    </div>
-                    <div class="quantity-element">
-                        <p class="cart-item-quantity">Quantity: 1</p>
-                        <button class="change-quantity-btn">+</button>
-                        <button class="change-quantity-btn">-</button>
-                    </div>
-                    <button class="cta">Remove</button>
-                </div> -->
+            <div 
+            class="cart-container" id="cart-container">
             </div>
-            <div class="cart-tot">
+            <div 
+            class="cart-totals" id="cart-totals-container">
+                <p>Total kr</p>
+                <p>Kr saved</p>
+                <p>Total items</p>
+            </div>
+            <!-- <div class="cart-tot">
                 <span class="cart-total-title">Total</span>
                 <span class="cart-total-price"></span>
             </div>
+            <div class="cart-item">
+                <a href="filmpage.html">
+                    <img class="cart-image" src="../assets/banner-horror_matthias-cooper-ObYmRBaMDyg-unsplash.jpg" alt="">
+                </a>
+                <div class="info-element">
+                    <p class="cart-item-title">Title</p>
+                    <p class="cart-item-price">129 kr</p>
+                </div>
+                <div class="quantity-element">
+                    <p class="cart-item-quantity">Quantity: 1</p>
+                    <button class="change-quantity-btn">+</button>
+                    <button class="change-quantity-btn">-</button>
+                </div>
+                <button class="cta">Remove</button>
+            </div> -->
             
             <form action="./checkoutsuccess.html">
                 <div class="form-wrapper-grid">
