added total items in cart details

--- a/html/checkout.html
+++ b/html/checkout.html
@@ -76,15 +76,14 @@
         </header>
         <main>
             <h1>Checkout</h1>
+            <div class="cart-container" id="cart-container"></div>
+            <div id="cart-details-container"></div>
             <div 
-            class="cart-container" id="cart-container">
+                class="cart-buttons" id="cart-buttons">
+                    <button class="clear-cart"></button>
+                    <button class="go-to-checkout"></button>
             </div>
-            <div 
-            class="cart-totals" id="cart-totals-container">
-                <p>Total kr</p>
-                <p>Kr saved</p>
-                <p>Total items</p>
-            </div>
+            
             <!-- <div class="cart-tot">
                 <span class="cart-total-title">Total</span>
                 <span class="cart-total-price"></span>
